maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:56: error: not found: value mini
      mini = getIndication(x,y+1);
      ^JediEscaper:61: error: not found: value mini
    if(getIndication(x-1,y)<mini){
                            ^JediEscaper:62: error: not found: value mini
      mini = getIndication(x-1,y);
      ^JediEscaper:67: error: not found: value mini
    if(getIndication(x,y-1)<mini)		{
                            ^JediEscaper:68: error: not found: value mini
      mini = getIndication(x,y-1);
      ^JediEscaper:73: error: not found: value mini
    if(getIndication(x+1,y)<=mini){
                             ^JediEscaper:74: error: not found: value mini
      mini = getIndication(x+1,y);
      ^